# hello_modules

./: CMakeLists.txt  build_vs_2022.bat  circle.cxx  main.cxx  rectangle.cxx  shape.cxx  shape_factory.cxx  triangle.cxx
